Changes in models. Added Lists.

--- a/WebApp/WebApp/WebApp.csproj
+++ b/WebApp/WebApp/WebApp.csproj
@@ -289,6 +289,10 @@
     <Compile Include="Migrations\201905281753563_RestModelMigration.Designer.cs">
       <DependentUpon>201905281753563_RestModelMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905291223051_CorrectionMigration1.cs" />
+    <Compile Include="Migrations\201905291223051_CorrectionMigration1.Designer.cs">
+      <DependentUpon>201905291223051_CorrectionMigration1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -455,6 +459,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201905281753563_RestModelMigration.resx">
       <DependentUpon>201905281753563_RestModelMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905291223051_CorrectionMigration1.resx">
+      <DependentUpon>201905291223051_CorrectionMigration1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
