Some fixes on unauthorized user view. Admin view started.

--- a/WebApp/WebApp/WebApp.csproj
+++ b/WebApp/WebApp/WebApp.csproj
@@ -332,6 +332,7 @@
     <Compile Include="Models\BindingModels\CatalogInfo.cs" />
     <Compile Include="Models\BindingModels\ScheduleInfo.cs" />
     <Compile Include="Models\BindingModels\TicketPrices.cs" />
+    <Compile Include="Models\BindingModels\TicketUnauthorized.cs" />
     <Compile Include="Models\Catalog.cs" />
     <Compile Include="Models\CatalogHistory.cs" />
     <Compile Include="Models\Line.cs" />
