--- a/WebApp/WebApp/WebApp.csproj
+++ b/WebApp/WebApp/WebApp.csproj
@@ -329,6 +329,7 @@
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\BindingModels\CatalogAdminInfo.cs" />
     <Compile Include="Models\BindingModels\CatalogInfo.cs" />
     <Compile Include="Models\BindingModels\ScheduleInfo.cs" />
     <Compile Include="Models\BindingModels\TicketPrices.cs" />
