--- a/WebApp/WebApp/WebApp.csproj
+++ b/WebApp/WebApp/WebApp.csproj
@@ -341,6 +341,10 @@
     <Compile Include="Migrations\201906061611251_UpdatedAppUser.Designer.cs">
       <DependentUpon>201906061611251_UpdatedAppUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201906091843218_orderAdded.cs" />
+    <Compile Include="Migrations\201906091843218_orderAdded.Designer.cs">
+      <DependentUpon>201906091843218_orderAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -543,6 +547,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201906061611251_UpdatedAppUser.resx">
       <DependentUpon>201906061611251_UpdatedAppUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906091843218_orderAdded.resx">
+      <DependentUpon>201906091843218_orderAdded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
